--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^1.9.0"
+    "@astrojs/tailwind": "^2.1.3",
+    "astro": "^1.9.0",
+    "sass": "^1.57.1",
+    "tailwindcss": "^3.2.4"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
