--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/preact": "^2.1.0",
     "@astrojs/tailwind": "^2.1.3",
+    "@astrojs/ts-plugin": "^1.0.4",
     "astro": "^1.9.0",
+    "preact": "^10.13.2",
     "sass": "^1.57.1",
     "tailwindcss": "^3.2.4"
   },
