--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -31,7 +31,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: ki-site-service
+  name: ki-site
   namespace: ki-site
 spec:
   selector:
