--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: https-ingress
-  namespace: ki-site
+  namespace: ki.fh-swf.cloud
   annotations:
     traefik.frontend.passHostHeader: 'true'
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
@@ -26,7 +26,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: https-ingress
-  namespace: ki-site
+  namespace: www.ki.fh-swf.de
   annotations:
     traefik.frontend.passHostHeader: 'true'
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
