--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -2,8 +2,8 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: https-ingress
-  namespace: ki.fh-swf.cloud
+  name: ki.fh-swf.cloud
+  namespace: ki-site
   annotations:
     traefik.frontend.passHostHeader: 'true'
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
@@ -25,8 +25,8 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: https-ingress
-  namespace: www.ki.fh-swf.de
+  name: www.ki.fh-swf.de
+  namespace: ki-site
   annotations:
     traefik.frontend.passHostHeader: 'true'
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
