--- a/package.json
+++ b/package.json
@@ -12,14 +12,11 @@
   },
   "dependencies": {
     "@astrojs/preact": "^4.0.9",
-    "@astrojs/tailwind": "^6.0.0",
     "@astrojs/ts-plugin": "^1.1.0",
+    "@tailwindcss/vite": "^4.1.6",
     "astro": "^5.7.12",
     "preact": "^10.16.0",
     "sass": "^1.69.5",
-    "tailwindcss": "^3.3.3"
-  },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9"
+    "tailwindcss": "^4.1.6"
   }
 }
